--- a/CodeBooks.Rmd
+++ b/CodeBooks.Rmd
@@ -42,11 +42,9 @@ For each record in the dataset it is provided:
 4. Appropriately labels the data set with descriptive variable names.
 5. From the data set in step 4, creates a second, independent tidy data set      with the average of each variable for each activity and each subject.
 
-### OUtput
+### Output
 label              : the label of the dataset as an activity
 subject            : number identification for subject
 usage              : the usage of dataset for training or testing
-mean               : the mean of each measurement
-standart_deviation : the standart deviation of each measurement
-mean_label         : the mean value for the coresponding label
-mean_subject       : the mean value for the coresponding subject
+X-mean-subject     : mean of X for each subject
+X-mean-label       : mean of X for each label
